force-app/main/default/objects/Seat__mdt/Seat__mdt.object-meta.xml
<CustomObject>
    <label>Seat</label>
    <pluralLabel>Seats</pluralLabel>
</CustomObject>