force-app/main/default/objects/Seat__mdt/fields/Cubicle__c.field-meta.xml
<CustomField>
    <fullName>Cubicle__c</fullName>
    <label>Cubicle</label>
    <referenceTo>Cubicle__mdt</referenceTo>
    <relationshipLabel>Seats</relationshipLabel>
    <relationshipName>Seats</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>