force-app/main/default/objects/Seat__mdt/fields/IsCloseToAC__c.field-meta.xml
<CustomField>
    <fullName>IsCloseToAC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCloseToAC</label>
    <type>Checkbox</type>
</CustomField>