force-app/main/default/objects/Seat__mdt/fields/isCloseToWIndow__c.field-meta.xml
<CustomField>
    <fullName>isCloseToWIndow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCloseToWIndow</label>
    <type>Checkbox</type>
</CustomField>