force-app/main/default/objects/Seat__mdt/fields/Seat_Id__c.field-meta.xml
<CustomField>
    <fullName>Seat_Id__c</fullName>
    <label>Seat Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>